# calendar_writer

./: README.md  pyproject.toml  school_calendar.py  school_calendar_as_df.py  school_calendar_w_logging.py
output/: school_closings_calendar-orig.ics  school_closings_calendar.ics
