[tool.poetry]
name = "school"
version = "0.1.0"
description = ""
authors = ["Xavier Mandeng <mandeng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ics = "^0.7.2"
pandas = "^2.2.2"
numpy = "^2.1.1"
pytz = "^2024.2"
types-pytz = "^2024.2.0.20240913"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "C0103",  # Invalid name (non-conforming to naming style)
    "C0116",  # Missing function/method docstring
    "C0114",  # Missing module docstring (this corresponds to 'missing-module-docstring')
]

